# pfavrai

./: .replit  README.md  README_WINDOWS.md  app.py  cookies.txt  email_service.py  init_admin_user.py  install_complete.bat  install_windows.bat  launch_windows.bat  main.py  main_windows.py  models.py  pyproject.toml  quick_start.bat  replit.md  replit_auth.py  requirements_windows.txt  routes.py  routes_original.py  scheduler.py  simulateur_camera.py  start.py  start_windows.py  test_ping.py
attached_assets/extracted/CameraMonitorSystem/: .replit  app.py  install_windows.bat  launch_windows.bat  main_windows.py  pyproject.toml  replit.md  scheduler.py
attached_assets/extracted/CameraMonitorSystem/attached_assets/: alerts_1754599723662.html  app_1754599743180.py  base_1754599723663.html  clients_1754599723653.html  dashboard_1754599723657.html  equipements_1754599723658.html  equipments_1754599723660.html  history_1754599723661.html  install_windows_1754599834942.bat  main_1754599839744.py  models_1754599843723.py  monitoring_local_1754599848918.db  routes_1754599854625.py  scheduler_1754599861198.py  simulateur_camera_1754599868297.py  test_ping_1754599864794.py
attached_assets/extracted/CameraMonitorSystem/static/css/: custom.css
attached_assets/extracted/CameraMonitorSystem/templates/: clients.html  dashboard.html  history.html
instance/: monitoring_local.db
templates/: 403.html  admin_users.html  alerts.html  base.html  camera_detail.html  cameras.html  clients.html  dashboard.html  equipements.html  landing.html  login.html  register.html  settings.html
(+2 files in other folders)
